syntax = "proto3";

import "structs/location.proto";
import "structs/time_span.proto";

package structs;
option go_package = "github.com/swkoubou/torch/server/view/pb/messages/structs";

// マップ上に「ここにスポットがあるよ」のを示すためのピン
// スポット情報まるまるだと情報量が増えるので、ピンをたてるのに必要な情報だけを抜き出した
message PinInfo {
    uint32 spot_id = 1; // スポットID
    Location location = 2; // スポットの座標
    TimeSpan event_span = 3; // スポットのイベント開催時間

    double hot_score = 10; // ホット度合い(高い方がホット)
}